--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,7 @@ main {
 .btn-container {
   margin-bottom: 2rem;
   display: flex;
-  
+
 }
 
 button {
@@ -221,7 +221,7 @@ button:hover {
   height: 13rem;
   width: 18rem;
   display: grid;
-  margin-left:-9rem;
+  margin-left: -9rem;
   /* gap: 0.5rem 0.5rem; */
 }
 
@@ -263,6 +263,57 @@ button:hover {
   font-weight: 700;
   font-size: medium;
 }
+
+/* update form update functionality */
+.form-container {
+  height: 18rem;
+  width: 20rem;
+  border: 0.25rem solid var(--clr-gold);
+  border-radius: var(--radius);
+  position: fixed;
+  top: 13rem;
+  left: 35rem;
+  background-color: var(--clr-grey-5);
+  padding-left:2rem;
+  padding-top:1rem;
+}
+label{
+  display:flex;
+  flex-direction:column;
+  gap:0.25rem;
+}
+form input{
+  height:2rem;
+  width:8rem;
+  border-radius:var(--radius);
+  background-color:var(--clr-grey-8);
+  padding-left:12px;
+}
+form .titleInput{
+  width:15rem;
+}
+ form  button {
+  margin-top:1rem;
+  background-color:var(--clr-white);
+ }
+.userid{
+  color:var(--clr-gold);
+  letter-spacing:0.15rem;
+}
+.id{
+  color:var(--clr-black);
+  letter-spacing:0.15rem;
+}
+.para{
+  color:var(--clr-grey-2);
+  letter-spacing:0.15rem;
+}
+.form-container >.title{
+  margin-top:0.4rem;
+  margin-bottom:0.2rem;
+  }
+
+
 
 @media screen and (min-width: 768px) {
   .album-item {
